license specify exactly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 description = "A Rust wrapper for the Laftel.net API"
 authors = ["KimKyuRae <mootomgame@gmail.com>"]
-license = "gpl-3.0"
+license = "GPL-3.0-only"
 repository = "https://github.com/KakouLabs/Laftel-rs"
 keywords = ["laftel", "api", "wrapper", "anime"]
 categories = ["api-bindings"]
